syntax = "proto3";

option java_multiple_files = true;
option java_package = "generated.ds.service1";
option java_outer_classname = "Service1Impl";

package service1;

// Interface exported by the server.
//service Service1 {----------------------to validate if I need to change the name of service to  AirConditioning as before


// Air Conditioning service definition.
service Service1 {
  // Bidirectional streaming RPC for control the temperature.
  rpc controlTemperature(stream ControlRequest) returns (stream ControlResponse) {}
}

// Request message for controlling temperature.
message ControlRequest {
  int32 temperature = 1;
}

// Response message for temperature control.
message ControlResponse {
  string action = 1; // I will add with my conditions the option of: "Decreasing temperature", "Increasing temperature", or "Keeping temperature"
}